--- a/internal/protoc-gen-nidhi/templates/json.tmpl
+++ b/internal/protoc-gen-nidhi/templates/json.tmpl
@@ -132,7 +132,7 @@ func (s *{{ $name }}Slice) UnmarshalDocument(r *jsoniter.Iterator) error {
 		{{$fa}} = &{{$gtype.Value}}{}
 		r.Error = {{$fa}}.UnmarshalDocument(r)
 	{{- else if . | IsBytes }}
-		{{$fa}} = []byte(r.ReadString())
+		{{$fa}} = nidhigen.ReadByteSlice(r)
 	{{- else }}
 		{{$fa}} = r.Read{{ $gtype | Capitalise }}()
 	{{- end }}
