--- a/internal/protoc-gen-nidhi/templates/fields.tmpl
+++ b/internal/protoc-gen-nidhi/templates/fields.tmpl
@@ -3,7 +3,11 @@
 type {{ $schemaImp }} struct {
 {{- range .Fields -}}
 {{- if .Type.IsEmbed }}
+    {{- if . | IsWKT }}
+    {{ . | Name | LowerCamel }} string
+    {{- else }}
 	{{ . | Name | LowerCamel }} *{{ .Type.Embed | Name | LowerCamel }}Schema
+    {{- end }}
 {{- else }}
     {{ . | Name | LowerCamel }} string
 {{- end }}
@@ -21,6 +25,10 @@ func new{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
 	{{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')",
 {{- else if . | IsBool }}
 	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::bool",
+{{- else if . | IsWKT }}
+    {{- if . | IsWKTTime }}
+	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::timestamp",
+    {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
 {{- else if .Type.IsEmbed }}
@@ -47,6 +55,12 @@ func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.StringField {
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.BoolField {
         return nidhigen.BoolField(s.{{ . | Name | LowerCamel }})
     }
+{{- else if . | IsWKT }}
+    {{- if . | IsWKTTime }}
+func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.TimeField {
+        return nidhigen.TimeField(s.{{ . | Name | LowerCamel }})
+    }
+    {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
