--- a/internal/protoc-gen-nidhi/templates/fields.tmpl
+++ b/internal/protoc-gen-nidhi/templates/fields.tmpl
@@ -28,6 +28,8 @@ func new{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
 {{- else if . | IsWKT }}
     {{- if . | IsWKTTime }}
 	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::timestamp",
+    {{- else if . | IsWKTAny }}
+    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
     {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
@@ -59,6 +61,10 @@ func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.BoolField {
     {{- if . | IsWKTTime }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.TimeField {
         return nidhigen.TimeField(s.{{ . | Name | LowerCamel }})
+    }
+    {{- else if . | IsWKTAny }}
+func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
+        return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
     }
     {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
