--- a/internal/protoc-gen-nidhi/templates/header.tmpl
+++ b/internal/protoc-gen-nidhi/templates/header.tmpl
@@ -12,6 +12,7 @@ import (
 
 	"github.com/srikrsna/nidhi"
 	nidhigen "github.com/srikrsna/nidhi/nidhigen"
+	"google.golang.org/protobuf/types/known/anypb"
 )
 
 var (
@@ -21,5 +22,6 @@ var (
 	_ = jsoniter.Marshal
 	_ = nidhi.JSONB
 	_ = nidhigen.WriteString
+	_ = anypb.New
 )
 
