--- a/internal/protoc-gen-nidhi/templates/query.tmpl
+++ b/internal/protoc-gen-nidhi/templates/query.tmpl
@@ -22,6 +22,8 @@ type {{ $name }}Query interface {
 {{- else if . | IsWKT }}
 	{{- if . | IsWKTTime }}
 	{{ . | Name }}(*nidhi.TimeQuery) {{ $name }}Conj
+	{{- else if . | IsWKTAny }}{{- $gtype := . | GoType }}
+	{{ . | Name }}({{$gtype.Element}}) {{ $name }}Conj
 	{{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 	{{ . | Name }}({{ with not .Type.Element.IsEmbed }}nidhi.SliceOptions,{{ end }} ...{{ $gtype.Element }}) {{ $name }}Conj
@@ -84,6 +86,11 @@ func (q *{{ $lowerName }}Query) {{ . | Name }}(f *nidhi.TimeQuery) {{ $name }}Co
 	(*nidhi.Query)(q).Field(" ("+nidhi.ColDoc+"->'{{ .Name | LowerCamel }}')::timestamp", f)
 	return q
 }
+	{{- else if . | IsWKTAny }}{{- $gtype := . | GoType }}
+func (q *{{ $lowerName }}Query) {{ . | Name }}(f {{ $gtype }}) {{ $name }}Conj {
+	(*nidhi.Query)(q).Field(" ("+nidhi.ColDoc+"->'{{ .Name | LowerCamel }}')", nidhi.MarshalerQuery{nidhigen.ProtoMarshaler{f}})
+	return q
+}	
 	{{ end }}
 	{{ else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 func (q *{{ $lowerName }}Query) {{ . | Name }}({{ with not .Type.Element.IsEmbed }}opt nidhi.SliceOptions,{{ end }} arr ...{{ $gtype.Element }}) {{ $name }}Conj {
