--- a/internal/protoc-gen-nidhi/templates/fields.tmpl
+++ b/internal/protoc-gen-nidhi/templates/fields.tmpl
@@ -1,12 +1,12 @@
 
-{{- $schemaImp := printf "%s%s" (. | Name | LowerCamel) "Schema" }}
+{{- $schemaImp := printf "%s%sImp" (. | Name ) "Schema" }}
 type {{ $schemaImp }} struct {
 {{- range .Fields -}}
 {{- if .Type.IsEmbed }}
     {{- if . | IsWKT }}
     {{ . | Name | LowerCamel }} string
     {{- else }}
-	{{ . | Name | LowerCamel }} *{{ .Type.Embed | Name | LowerCamel }}Schema
+	{{ . | Name | LowerCamel }} {{ . | GoType  }}SchemaImp
     {{- end }}
 {{- else }}
     {{ . | Name | LowerCamel }} string
@@ -14,7 +14,7 @@ type {{ $schemaImp }} struct {
 {{- end }}
 }
 
-func new{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
+func New{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
     return &{{ $schemaImp }} {
 {{- range .Fields -}}
 {{- if .Type.ProtoType.IsInt }}
@@ -30,11 +30,13 @@ func new{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
 	{{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')::timestamp",
     {{- else if . | IsWKTAny }}
     {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
+    {{- else if . | IsWKTFieldMask }}
+    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
     {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
 {{- else if .Type.IsEmbed }}
-	{{ . | Name | LowerCamel }}: new{{ .Type.Embed | Name }}Schema(prefix+"->'{{ .Name | LowerCamel }}'"),
+	{{ . | Name | LowerCamel }}: {{ template "prefix" . }}New{{ .Type.Embed | Name }}Schema(prefix+"->'{{ .Name | LowerCamel }}'"),
 {{- end }}
 {{- end }}
     }
@@ -66,14 +68,21 @@ func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.TimeField {
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
     }
+    {{- else if . | IsWKTFieldMask }}
+func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
+        return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
+    }
     {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
     }
 {{- else if .Type.IsEmbed }}
-func (s *{{ $schemaImp }}) {{ . | Name }}() *{{ .Type.Embed | Name | LowerCamel }}Schema {
+func (s *{{ $schemaImp }}) {{ . | Name }}() {{ . | GoType }}SchemaImp {
         return s.{{ . | Name | LowerCamel }}
     }
 {{- end }}
 {{- end }}
+
+
+{{ define "prefix" }}{{ if ne (. | ImportPath) (.Type.Embed | ImportPath) }}{{ .Type.Embed | PackageName }}.{{ end }}{{ end }}
