--- a/internal/protoc-gen-nidhi/templates/fields.tmpl
+++ b/internal/protoc-gen-nidhi/templates/fields.tmpl
@@ -18,25 +18,25 @@ func New{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
     return &{{ $schemaImp }} {
 {{- range .Fields -}}
 {{- if .Type.ProtoType.IsInt }}
-	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::bigint",
+	    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::bigint",
 {{- else if .Type.ProtoType.IsNumeric }}
-	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::double precision",
+	    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::double precision",
 {{- else if . | IsString }}
-	{{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')",
+	    {{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')",
 {{- else if . | IsBool }}
-	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::bool",
+	    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')::bool",
 {{- else if . | IsWKT }}
     {{- if . | IsWKTTime }}
-	{{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')::timestamp",
+	    {{ . | Name | LowerCamel }}: prefix+"->>'{{ .Name | LowerCamel }}')::timestamp",
     {{- else if . | IsWKTAny }}
-    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
+        {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
     {{- else if . | IsWKTFieldMask }}
-    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
+        {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
     {{- end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
-	{{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
+	    {{ . | Name | LowerCamel }}: prefix+"->'{{ .Name | LowerCamel }}')",
 {{- else if .Type.IsEmbed }}
-	{{ . | Name | LowerCamel }}: {{ template "prefix" . }}New{{ .Type.Embed | Name }}Schema(prefix+"->'{{ .Name | LowerCamel }}'"),
+	    {{ . | Name | LowerCamel }}: {{ template "prefix" . }}New{{ .Type.Embed | Name }}Schema(prefix+"->'{{ .Name | LowerCamel }}'"),
 {{- end }}
 {{- end }}
     }
@@ -46,41 +46,41 @@ func New{{ . | Name }}Schema(prefix string) *{{ $schemaImp }} {
  {{- if .Type.ProtoType.IsInt }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.IntField {
         return nidhigen.IntField(s.{{ . | Name | LowerCamel }})
-    }
-{{- else if .Type.ProtoType.IsNumeric }}
+}
+{{ else if .Type.ProtoType.IsNumeric }}
 func (s *{{ $schemaImp }}) {{- . | Name }}() nidhigen.FloatField {
         return nidhigen.FloatField(s.{{ . | Name | LowerCamel }})
-    }
-{{- else if . | IsString }}
+}
+{{ else if . | IsString }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.StringField {
         return nidhigen.StringField(s.{{ . | Name | LowerCamel }})
-    }
-{{- else if . | IsBool }}
+}
+{{ else if . | IsBool }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.BoolField {
         return nidhigen.BoolField(s.{{ . | Name | LowerCamel }})
-    }
-{{- else if . | IsWKT }}
+}
+{{ else if . | IsWKT }}
     {{- if . | IsWKTTime }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.TimeField {
         return nidhigen.TimeField(s.{{ . | Name | LowerCamel }})
-    }
-    {{- else if . | IsWKTAny }}
+}
+{{ else if . | IsWKTAny }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
-    }
-    {{- else if . | IsWKTFieldMask }}
+}
+{{ else if . | IsWKTFieldMask }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
-    }
-    {{- end }}
+}
+{{ end }}
 {{- else if .Type.IsRepeated }}{{- $gtype := . | GoType }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() nidhigen.UnorderedField {
         return nidhigen.UnorderedField(s.{{ . | Name | LowerCamel }})
-    }
-{{- else if .Type.IsEmbed }}
+}
+{{ else if .Type.IsEmbed }}
 func (s *{{ $schemaImp }}) {{ . | Name }}() {{ . | GoType }}SchemaImp {
         return s.{{ . | Name | LowerCamel }}
-    }
+}
 {{- end }}
 {{- end }}
 
